--- a/parties/tarifs.html
+++ b/parties/tarifs.html
@@ -31,9 +31,9 @@
             <small class="text-body-secondary">Last updated 3 mins ago</small>
         </div>
     </div>
-    <div class="card">
+    <div class="card border-primary >
         <img src="/img/onlineshop.jpg" class="card-img-top align-items-center" alt="..."style="max-width: 20rem;">
-        <div class="card-body">
+        <div class="card-body ">
             <h5 class="card-title">site marchand</h5>
             <button type="button" class="btn btn-outline-primary" style="font-weight: bold">1800$ </button>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
