--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p>création de sites web vitrines, marchands, hebergement et maintenance</p>
             </div>
             <div class="col">
-                <img src="T:\dev\bootstrap-tp1\bootstrap-tp1\img\Capture d'écran 2024-02-06 103528.png" class="rounded float-end table-responsive-md d-md-block d-none" alt="...">
+                <img src="\T:\dev\bootstrap-tp1\bootstrap-tp1\img\Capture d'écran 2024-02-06 103528.png" class="rounded float-end table-responsive-md d-md-block d-none" alt="...">
             </div>
     </section>
 
