--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <strong class="text-body-secondary">1000$</strong>
+                            <strong class="text-body-secondary"> a partir de 1000$</strong>
                         </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                             <p class="card-text">UN site web responsible, esthetique, avec ajouts de vos produits,Un site internet marchand est un site internet qui permet à ses visiteurs de commander et/ou de payer des produits et/ou services. Il se distingue du site internet vitrine, ou site institutionnel, dont l'objectif se limite généralement à la présentation d'une entreprise, de ses produits et/ou de ses services.</p>
                         </div>
                         <div class="card-footer">
-                            <strong class="text-body-secondary">500$</strong>
+                            <strong class="text-body-secondary"> a partir de 500$</strong>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                             <p class="card-text">UN site web responsible, esthetique, avec ajouts de vos produits</p>
                         </div>
                         <div class="card-footer">
-                            <strong class="text-body-secondary">50$/month</strong>
+                            <strong class="text-body-secondary"> a partit de 50$/month</strong>
                         </div>
                     </div>
                 </div>
